# rust-journey

./: .gitignore  READING.md
rust-book/01_hello_cargo/: Cargo.toml
rust-book/02_guessing_game/.cargo/: config.toml
rust-book/02_guessing_game/.run/: Check.run.xml  Run.run.xml
rust-book/03_variables/src/: main.rs
rust-book/04_functions/src/: main.rs
rust-book/05_branches/src/: main.rs
rust-book/06_temperature/src/: main.rs
rust-book/07_fibonacci/.cargo/: config.toml
rust-book/07_fibonacci/src/: main.rs
rust-book/08_carol/.run/: Build.run.xml  Check.run.xml  Run.run.xml
rust-book/08_carol/src/: main.rs
rust-book/guessing_game/.run/: Build.run.xml
rust-book/guessing_game/src/: main.rs
