[package]
name = "hello_cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true        # Automatically strip symbols from the binary.
lto = true          # Instruct linker to optimize at the link stage.
codegen-units = 1   # Allow for maximum size reduction optimizations.
panic = "abort"     # Remove unwind code used for backtrace.

[dependencies]
